# NASA-gamma

./: .gitignore  .pre-commit-config.yaml  DAWN_Data_Plotting.py  GUI-TODO.txt  LICENSE  README.md  ecalGUI  example1.py  gammaGUI  gammaGUI-qt  mplwidget.py  nasagamma_test.py  param_handle.py  peaksearch.py  pyproject.toml  setup.py  slider_example.py  spectrum.py  test.py
examples/: 1.spectrum_example.ipynb  2.peaksearch_example.ipynb  3.peakfitting_example.ipynb  4.energy-calibration.ipynb  5.Gaussian-components.ipynb  6.saving-peaks-to-hdf.ipynb  example_add_peaks.py  example_add_peaks_energy.py  example_advfit_area_bkg.py  example_auto_scan.py  example_diagnostics.py  example_ecal.py  example_efficiency.py  example_gain_shift.py  example_gaussian_broadening.py  example_mca_pixie.py  example_peakfit.py  example_peaksearch.py  example_plot_overlay.py  example_read_and_save.py  example_read_tlist.py  example_read_trace_data_pixie.py  example_save_peaks_to_hdf.py  example_smart_cal.py  example_spectrum.py  example_spectrum_smoothing.py  example_tlist.py  experimental-CeBr-Co60.hdf  read-peaks-df.py  rebinning_example.py
examples/data/: 03-23-2021-MGS.cnf  03-23-2021-ba133.cnf  10-23-2020-800-3.csv  2021-03-23-cs137.cnf  HPGe_NH3_test.txt  SSR-mcnp.hdf  convolution-mcnp.hdf  experimental-LaBr.hdf  fitted_peaks.hdf  gui_CAEN_listmode_test_data.txt  gui_test_data_3He.mca  gui_test_data_cebr.csv  gui_test_data_cebr_cal.csv  gui_test_data_hpge.csv  gui_test_data_hpge_Cu.Spe  gui_test_data_hpge_NH3.pha.txt  gui_test_data_hpge_NH3.txt  gui_test_data_lab_sources.cnf  gui_test_data_labr_uncalibrated.csv  gui_test_data_nonlinear.csv  gui_test_data_tlist.txt  test-nonlinear.parquet  test_data_Fe_API.txt  test_data_bkg_API.txt
examples/energy_calibration/: example_ecal.py  example_ecal_nonlinear.py  example_smart_cal.py  test_piecewise.py
examples/file_reader/: example_file_reader.py  example_read_and_save.py
examples/peakfit/: example_chi2_optimizer.py  example_peakfit.py
examples/peaksearch/: example_peaksearch_cebr.py  example_peaksearch_hpge.py
examples/spectrum/: example_errors.py  example_gain_shift.py  example_plot_overlay.py  (+3 more)
nasagamma/: __init__.py  advanced_fit.py  apicalc.py  apipandas.py  cnf_reader.py  data_fetcher.py  decay_exponential.py  diagnostics.py  ecalGUI.py  efficiency.py  energy_calibration.py  file_reader.py  gammaGUI.py  gui.py  gui_test_data.csv  helper_api.py  list_mode_data_reader.py  param_handle.py  parse_NIST.py  peakarea.py  peakfit.py  peaksearch.py  plot.py  qt_gui.ui  read_cnf.py  read_parquet_api.py  resolution.py  spectrum.py  tlist.py  win_add_subtract.ui  win_adv_fit.ui  win_api_3D.ui  win_api_binary.ui  win_api_filters.ui  win_api_mca.ui  win_change_theme.ui  win_cnf.ui  win_customize.ui  win_eff.ui  win_erg_cal.ui  (+15 more)
scratch/: test_advanced_fit_PeakAreaLinearBkg.py
tests/: test_energy_calibration.py  test_file_reader.py  test_peakfit.py  test_peaksearch.py  test_spectrum.py
(+35 files in other folders)
