[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2" ]
build-backend = "setuptools.build_meta"

[project]
name = "nasagamma"
dynamic = ["version"]
authors = [
  { name="Mauricio Ayllon Unzueta", email="mauri.ayllon12@gmail.com" },
]
description = "Gamma spectroscopy tools"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "dateparser >= 1.1.1",
    "docopt >= 0.6.2",
    "lmfit > 1.0.2",
    "matplotlib > 3.5.1",
    "mplcursors >= 0.5.2",
    "numpy",
    "pandas > 1.4.2",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/mauricioAyllon/NASA-gamma"
"Bug Tracker" = "https://github.com/mauricioAyllon/NASA-gamma/issues"

[tool.setuptools.packages.find]
where = ["nasagamma"]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.csv", "*.ui"]

[project.scripts]
gammaGUI-qt = "nasagamma.cli.gammaGUI_qt:main"


[tool.setuptools_scm]
write_to = "nasagamma/version.py"